// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Debug and troubleshoot production issues on Azure. Covers Container Apps and Function Apps diagnostics, log analysis with KQL, health checks, and common issue resolution for image pulls, cold starts, health probes, and function invocation failures. WHEN: debug production issues, troubleshoot container apps, troubleshoot function apps, troubleshoot Azure Functions, analyze logs with KQL, fix image pull failures, resolve cold start issues, investigate health probe failures, check resource health, view application logs, find root cause of errors, function app not working, function invocation failures.",
  "extractedKeywords": [
    "analysis",
    "analyze",
    "application",
    "apps",
    "azure",
    "cause",
    "check",
    "checks",
    "cli",
    "cold",
    "common",
    "container",
    "covers",
    "debug",
    "diagnostic",
    "diagnostics",
    "errors",
    "failures",
    "find",
    "function",
    "functions",
    "health",
    "image",
    "investigate",
    "invocation",
    "issue",
    "issues",
    "logs",
    "mcp",
    "monitor",
    "probe",
    "probes",
    "production",
    "pull",
    "pulls",
    "resolution",
    "resolve",
    "resource",
    "root",
    "start",
    "starts",
    "troubleshoot",
    "view",
    "when",
    "with",
    "working",
  ],
  "name": "azure-diagnostics",
}
`;

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "analysis",
  "analyze",
  "application",
  "apps",
  "azure",
  "cause",
  "check",
  "checks",
  "cli",
  "cold",
  "common",
  "container",
  "covers",
  "debug",
  "diagnostic",
  "diagnostics",
  "errors",
  "failures",
  "find",
  "function",
  "functions",
  "health",
  "image",
  "investigate",
  "invocation",
  "issue",
  "issues",
  "logs",
  "mcp",
  "monitor",
  "probe",
  "probes",
  "production",
  "pull",
  "pulls",
  "resolution",
  "resolve",
  "resource",
  "root",
  "start",
  "starts",
  "troubleshoot",
  "view",
  "when",
  "with",
  "working",
]
`;
